--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header-photo">
         <header id="header">    
             <div id="logo">
-                <img src="logo-1.png" alt="logo">
+                <img src="./images/logo-1.png" alt="logo">
             </div>
             <nav id="navbar">
                 <ul class="nav-menu">
@@ -65,21 +65,21 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quidem doloribus harum qui dolore.</p>
         <div class="gallery">
             <div class="image-box">
-                <img src="photo-small-1.png" alt="">
+                <img src="./images/photo-small-1.png" alt="">
                 <div class="color-box">
                     <p class="photo-title">Lorem ipsum</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
             <div class="image-box">
-                <img src="photo-small-2.png" alt="">
+                <img src="./images/photo-small-2.png" alt="">
                 <div class="color-box">
                     <p class="photo-title">Lorem ipsum</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
             <div class="image-box">
-                <img src="photo-small-3.png" alt="">
+                <img src="./images/photo-small-3.png" alt="">
                 <div class="color-box">
                     <p class="photo-title">Lorem ipsum</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -95,7 +95,7 @@
 
     <div class="section-three">
         <div class="gallery">
-            <img class="promo" src="photo-big-2.png" alt="">
+            <img class="promo" src="./images/photo-big-2.png" alt="">
             <div class="promo grey">
                 <h1>Discount up to 50% All Excursions</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum debitis culpa inventore tenetur quod repellat ab consectetur voluptas, fugiat unde.</p>
@@ -107,7 +107,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum debitis culpa inventore tenetur quod repellat ab consectetur voluptas, fugiat unde.</p>
                 <button class="read-more">READ MORE</button>
             </div>
-            <img class="promo" src="photo-big-3.png" alt="">
+            <img class="promo" src="./images/photo-big-3.png" alt="">
         </div>
     </div>
 
@@ -184,16 +184,16 @@
             </p>
 
             <a href="https://www.instagram.com/" class="image-link">
-                <img src="Instagram.png" alt="instagram">
+                <img src="./images/Instagram.png" alt="instagram">
             </a>
             <a href="https://www.instagram.com/" class="image-link">
-                <img src="Facebook.png" alt="instagram">
+                <img src="./images/Facebook.png" alt="instagram">
             </a>
             <a href="https://www.instagram.com/" class="image-link">
-                <img src="Twitter.png" alt="instagram">
+                <img src="./images/Twitter.png" alt="instagram">
             </a>
             <a href="https://www.instagram.com/" class="image-link">
-                <img src="WhatsApp.png" alt="instagram">
+                <img src="./images/WhatsApp.png" alt="instagram">
             </a>
             
         </div>
