add id to home section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </header>
     </div>
   
-    <div class="section-one">
+    <div id="home-section" class="section-one">
         <div class="home">
             <div class="home-text">
                 <h1>IT'A TIME <br>FOR HIKING</h1>
