update ids to other sections

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="section-md"></div>
     </div>
 
-    <div class="section-two">
+    <div id="menu-section" class="section-two">
         <h1>LET'S GO</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quidem doloribus harum qui dolore.</p>
         <div class="gallery">
@@ -93,7 +93,7 @@
         
     </div>
 
-    <div class="section-three">
+    <div id="story-section" class="section-three">
         <div class="gallery">
             <img class="promo" src="./images/photo-big-2.png" alt="">
             <div class="promo grey">
@@ -131,7 +131,7 @@
         <div class="section-md"></div>
     </div>
 
-    <div class="section-six">
+    <div id="contact-section" class="section-six">
         <div class="opinion-section">
             <div class="opinion">
                 <p class="opinion-title">Lorem ipsum</p>
